--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario TAREA 02</title>
-    <link rel="stylesheet" href="/css/index-styles.css">
+    <link rel="stylesheet" href="css/index-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
         <span>By: Choquehuanca Salas Leonardo Ivan Anthony</span>
     </div>
 
-    <script src="/js/index-app.js"></script>
+    <script src="js/index-app.js"></script>
 </body>
 
 </html>
