--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/welcome-styles.css">
+    <link rel="stylesheet" href="css/welcome-styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Roboto+Mono:wght@500&display=swap" rel="stylesheet">
@@ -30,6 +30,6 @@
         <span>By: Choquehuanca Salas Leonardo Ivan Anthony</span>
     </div>
 
-    <script src="/js/welcome-app.js"></script>
+    <script src="js/welcome-app.js"></script>
 </body>
 </html>
